--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,7 +7,9 @@ burrower {
   influx = {
     host = "localhost"
     port = 8086
-    database = "metrics"
-    series = "kafka.consumer_lag"
+    database = "burrower"
+    series = "kafka_consumer_lag"
+    userName = ""
+    password = ""
   }
 }
